--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "lovechat",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+ "scripts": {
+  "dev": "next",
+  "build": "next build",
+  "start": "next start -p $PORT",
+  "heroku-postbuild": "npm run build",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@hookform/resolvers": "^3.1.0",
